--- a/dskyweb/mission/mission.html
+++ b/dskyweb/mission/mission.html
@@ -6,16 +6,29 @@
     <title>Mission Selector</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="script.js" defer></script>
+	<link href="https://cdn.jsdelivr.net/gh/nostalgic-css/NES.css/css/nes.min.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
+
 <div id="missionText" class="box">
     <h2>Mission Briefing</h2>
-    <video width="1024" height="768" autoplay loop muted>
-        <source src="map.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <button id="acceptMission">Accept Mission</button>
+    <div class="video-container">
+        <video width="100%" height="100%" autoplay loop muted class="video-border">
+            <source src="map.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+		
+    </div>
+	<div id="acceptMission" class="square">
+        <h2>Accept Mission</h2>
+    </div>
+
 </div>
+
+
+
 
 
 
